# rot8

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml  stale.yml
src/: error.rs  lib.rs  main.rs  orientation.rs  wayland_app.rs
src/backends/: hyprland.rs  mod.rs  sway.rs  wlroots.rs  xorg.rs
src/devices/: dummy.rs  mod.rs  xrandr.rs
src/sensors/: dummy.rs  mod.rs
