[package]
name = "rot8"
version = "0.1.3"
authors = ["efernau <e.fernau@efero.de>", "deadly_platypus <mail@geth.systems>", "nicola-sorace", "Adrian 'vifino' Pistol <vifino@tty.sh>"]
license = "MIT"
description = "automatic display rotation using built-in accelerometer"
homepage = "https://github.com/efernau/rot8"
documentation = "https://github.com/efernau/rot8"
repository = "https://github.com/efernau/rot8"
keywords = ["sway", "x11", "display", "rotation"]
edition = "2018"

[dependencies]
async-std = { version = "1.9", features = [ "attributes", "unstable" ] }
async-trait = "0.1"
clap = "2.33"
glob = "0.3"
lazy_static = "1.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

