[package]
name = "rot8"
version = "0.1.5"
authors = ["efernau <e.fernau@efero.de>", "deadly_platypus <mail@geth.systems>", "nicola-sorace"]
license = "MIT"
description = "automatic display rotation using built-in accelerometer"
homepage = "https://github.com/efernau/rot8"
documentation = "https://github.com/efernau/rot8"
repository = "https://github.com/efernau/rot8"
keywords = ["sway", "x11", "display", "rotation"]
edition = "2018"

[dependencies]
clap = "4.4"
glob = "0.3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true
lto = true
