[package]
name = "rot8"
version = "1.0.0"
authors = ["efernau <e.fernau@efero.de>", "deadly_platypus <mail@geth.systems>", "nicola-sorace"]
license = "MIT"
description = "automatic display rotation using built-in accelerometer"
homepage = "https://github.com/efernau/rot8"
documentation = "https://github.com/efernau/rot8"
repository = "https://github.com/efernau/rot8"
keywords = ["sway", "x11", "display", "rotation"]
edition = "2018"

[dependencies]
clap = "3.2"
glob = "0.3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wayland-client = "0.31.0"
wayland-protocols-wlr = { version = "0.3.3", features = ["client"] }

[profile.release]
strip = true
lto = true
